# marss2l

./: README.md  pyproject.toml
environment/: conda_vm.yaml  package_requirements.txt
marss2l/: eval_baseline.py  eval_final.py  loaders.py  locations_case_studies.py  mbmp_torch.py  metrics.py  models.py  reproduce_training.py  stats_dataset.py  train_final.py  trainer.py  utils.py  validation_utils.py
marss2l/mars_sentinel2/: countries.py  mixing_ratio_methane.py  plume_detection.py  plumesimulation.py  quantification.py  transmittance_to_ch4.py  utils.py  wind.py
marss2l/plot/: __init__.py  colors.py  geographical_location.py  images_by_month.py  inference.py  plot_histograms_predictions.py  plot_location_for_inference.py  prob_vs_emission_rate.py  recall_fluxrate_plot.py  time_series.py
notebooks/OLD_figures/: figure_malaysia_ts.ipynb  figure_number_of_plumes_by_fluxrate.ipynb
notebooks/WIP_notebooks/: IEA-MethaneEmissionsComparison-World.csv  mdl_exploration_by_region.ipynb
notebooks/figures/: README.md  ablation_threshold_pixels.ipynb  cloudsen12_experiment.ipynb  dataset_stats_by_split_and_geopackage_locations.ipynb  eval_model_and_figure_prob_vs_emission_rate.ipynb  figure_2_number_of_images_review.ipynb  figure_controlled_releases.ipynb  figure_number_of_images_per_country.ipynb  figure_wind_speed.ipynb  iea_estimates_of_emissions.ipynb  mdl_exploration_adapted.ipynb  mdl_exploration_by_case_study.ipynb  stats_dataset_toareflectances.ipynb
